# OpenGL

Voxel/: CMakeLists.txt  main.cpp
Voxel/src/: createshape.cpp  render.cpp  render.h
Voxel/src/Shader/: Shader.cpp  Shader.h
ownNoita/: CMakeLists.txt  main.cpp
ownNoita/src/: createshape.cpp  createshape.h  render.cpp  render.h  shader.cpp  shader.h
ownNoita/src/controls/: keyboardcontroller.cpp  keyboardcontroller.h
